grammar.js
    source_file: $ => repeat($._definition),

    // ------------------------
    // Top-level definitions
    // ------------------------
    _definition: $ => choice(
      $.syntax_declaration, // `syntax` id
      $.syntax_definition, // `syntax` list(id `<` list(tparam, `,`) `>`, `,`)
      $.variable_definition, // `var` id `:` plaintyp hint*
      $.relation_declaration, //`relation` id `:` notation_type hint*
      $.rule_definition, // `rule` id`/`id `:` exp list(`--` prem, nl)
      $.function_declaration, // `dec` id `<` list(tparam, `,`) `>` list(param, `,`) `:` plaintyp hint*
      $.function_definition, // `def` id `<` list(tparam, `,`) `>` list(arg, `,`) `=` exp list(`--` prem, nl)
      $.builtin_generator_declaration, // `builtin` `generator` id `:` plaintyp
      $.property_definition, // `property` id hint* `:` prem list(`--` prem, nl)
    ),

    syntax_definition: $ => seq(
      'syntax',
      $.syntax_id,
      optional($.type_parameters),
      optional($.hint),
      '=',
      $.syntax_body
    ),

    variable_definition: $ => seq(
      'var',
      field("name", $.syntax_id),
      ':',
      field("type", $.plain_type),
      field("hints", repeat($.hint))
    ),

    relation_declaration: $ => seq(
      'relation',
      field("name", $.relation_id),
      ':',
      field("body", $.notation_type),
      field("hints", repeat($.hint)),
    ),

    // Rule definitions use notations
    property_definition: $ => seq(
      'property',
      field("name", $.relation_id),
      ':',
      field("conclusion", $.rule_premise),
      field("premises", repeat(seq('--', $.premise, '\n'))),
      field("hints", repeat($.hint)),
    ),

    syntax_body: $ => choice(
      repeat1(seq('|', $.syntax_variant)),                       // | A | B
      seq($.syntax_variant, repeat(seq('|', $.syntax_variant))), // A | B  or single A
    ),

    // El.typcase: one case of a variant, a notation type with optional hints.
    syntax_variant: $ => seq($.notation_type, repeat($.hint)),

    type_parameters: $ => seq(
      '<',
      choice($.uppercase_id, $.lowercase_id),
      repeat(seq(',', choice($.uppercase_id, $.lowercase_id))),
      '>'
    ),

    wildcard_pattern: $ => '_',

    // ---------------------------
    // PREMISES
    // ----------------------------
    rule_premise: $ => seq(
      field("relation_name", $.relation_id),
      ':',
      field("body", $.notation)
    ),

    // If premises use expressions (boolean conditions) or assignment expressions
    notation_rel: $ => prec.left(1, seq(
      field("left", choice($.notation_rel, $.notation_bin, $.notation_seq)),
      field("operator", $.atom_relational),
      field("right", choice($.notation_bin, $.notation_seq))
    )),

    // infix atoms like ., .., etc.
    notation_seq: $ => prec.right(3, seq(
      $.notation_atom,
      repeat($.notation_atom),
    )),

    // atomic elements in notation expressions
    notation_atom: $ => choice(
      $.constructor_notation,     // ConstD id typ val
      $.atom,                     // atoms (infixops, relops, escape atoms)
      $.regular_id,               // variables like p, frame, fdenv
      $.number_literal,           // numbers
      $.text_literal,             // strings
      $.epsilon_literal,          // eps
      $.wildcard_pattern,         // wildcard _
      parenthesize($.notation),   // (expr) - simple parentheses (higher precedence)
      $.tuple_notation,           // (a, b) - tuples with commas
      $.bracket_notation,         // `( e `), `{ e `}, `[ e `], `< e `>
      iterate($.notation_atom),
    ),

    // Backtick-bracket groups in notation, e.g. `( t x `) or `{ e `}.
    hint: $ => seq(
      'hint',
      '(',
      $.hint_name,
      repeat($._hint_element),
      ')'
    ),

    hint_name: $ => choice(
      'input', 'show', 'macro', 'desc', 'name', 'generator',
      'prose', 'prose_in', 'prose_true', 'prose_false',
    ),

    _hint_element: $ => choice(
      $.hint_text,
      $.text_literal,        // Quoted prose, e.g. hint(prose "the integer" %0)
      $.hint_placeholder,
      $.hint_latex,
      $.hint_operator,       // Add support for operators using existing atoms
      $.hint_function_id,    // Add support for function ids like $distinct
      $.hint_parenthesized,  // Allow parenthesized hint expressions
    ),

    // Parenthesized hint expressions - can contain multiple hint elements
    hint_placeholder: $ => choice(
      token(seq('%', /\d+/)),
      token('%%'),
      prec(-1, token('%')),
    ),

    hint_function_id: $ => seq('$', /[a-z][a-z0-9_'-]*/),  // Function ids like $distinct, $func

    // -------------------------
    // LITERALS
    // -------------------------
    text_literal: $ => choice(
      seq('"', repeat(choice(/[^"\\]/, seq('\\', /./))), '"'),
      '""', // Empty string
    ),
    bool_type: $ => 'bool',
    natural_type: $ => 'nat',

    base_type: $ => choice(
      $.syntax_id,
      $.bool_type,
      $.text_type,
      $.natural_type,
      $.tuple_type,
      $.optional_type,
      $.generic_type,
    ),

    plain_type: $ => choice(
      $.base_type,
      $.iterated_type,
    ),

    notation_type: $ => $._notation_type_rel,

    _notation_type_rel: $ => choice(
      $._notation_type_bin,
      prec.right(1, seq(                          // |- prog        (prefix relop)
        field("operator", $.atom_relational),
        field("right", $._notation_type_rel),
      )),
      prec.left(1, seq(                           // C |- e : t     (infix relop)
        field("left", $._notation_type_rel),
        field("operator", $.atom_relational),
        field("right", $._notation_type_rel),
      )),
    ),

    atom: $ => choice(
      $.atom_infix,
      $.atom_relational,
      $.operator,
    ),

    atom_infix: $ => choice(
      ".",      // Atom.Dot
      "..",     // Atom.Dot2
      "...",    // Atom.Dot3
      ";",      // Atom.Semicolon
      "\\",     // Atom.Backslash
      "->",     // Atom.Arrow
      "->_",    // Atom.ArrowSub
      "=>_",    // Atom.DoubleArrowSub
      "==>",    // Atom.DoubleArrowLong
      "(/\\)",  // Atom.BigAnd
      "(\\/)",  // Atom.BigOr
      "(+)",    // Atom.BigAdd
      "(*)",    // Atom.BigMul
      "(++)",   // Atom.BigCat
    ),

    atom_relational: $ => choice(
      "=_",     // Atom.EqualSub
      ":",      // Atom.Colon
      ":_",     // Atom.ColonSub
      "<:",     // Atom.Sub
      ":>",     // Atom.Sup
      ":=",     // Atom.Assign
      "==",     // Atom.Equiv
      "==_",    // Atom.EquivSub
      "~~",     // Atom.Approx
      "~~_",    // Atom.ApproxSub
      "~>",     // Atom.SqArrow
      "~>_",    // Atom.SqArrowSub
      "~>*",    // Atom.SqArrowStar
      "~>*_",   // Atom.SqArrowStarSub
      "<<",     // Atom.Prec
      ">>",     // Atom.Succ
      "-|",     // Atom.Tilesturn
      "-|_",    // Atom.TilesturnSub
      "|-",     // Atom.Turnstile
      "|-_"     // Atom.TurnstileSub
    ),

    // Concrete operators are single-quoted, e.g. '+', '->', '&&'.
    operator: $ => token(seq("'", /[^'\n]*/, "'")),

    uppercase_id: $ => /[A-Z][a-zA-Z0-9_']*/, // Any uppercase-starting identifier
    lowercase_id: $ => /[a-z][a-zA-Z0-9_']*/, // Starting with lowercase, hyphens not allowed
    multi_caps_id: $ => token(prec(1, /[A-Z][A-Z][A-Z0-9_']*/)),  // All-caps word, 2+ leading capitals

    relation_id: $ => $.uppercase_id,
    constructor_id: $ => choice(
      $.uppercase_id,
      $.multi_caps_id,
      $.tag,
    ),

    // Abstract words: underscore-prefixed uppercase, e.g. _NUM, _BOOL, _ID.
    tag: $ => token(/_[A-Z][A-Za-z0-9_']*/),
    syntax_id: $ => choice($.lowercase_id, $.uppercase_id), // type variables

    regular_id: $ => choice( // variables
      $.lowercase_id,
      prec(2, $.single_letter_var),  // Prefer single letter variables in variable contexts
    ),
