test/corpus/declarations.txt
==================
variable declaration
==================

var x : nat

---

(source_file
  (variable_definition
    name: (syntax_id
      (lowercase_id))
    type: (plain_type
      (base_type
        (natural_type)))))

==================
syntax type alias
==================

syntax b = bool

---

(source_file
  (syntax_definition
    (syntax_id
      (lowercase_id))
    (syntax_body
      (syntax_variant
        (notation_type
          (plain_type
            (base_type
              (bool_type))))))))
