test/corpus/notation.txt
==================
syntax body: infix arrow notation
==================

syntax pair<K, V> = K -> V

---

(source_file
  (syntax_definition
    (syntax_id
      (lowercase_id))
    (type_parameters
      (uppercase_id)
      (uppercase_id))
    (syntax_body
      (syntax_variant
        (notation_type
          left: (plain_type
            (base_type
              (syntax_id
                (uppercase_id))))
          operator: (atom_infix)
          right: (plain_type
            (base_type
              (syntax_id
                (uppercase_id)))))))))

==================
syntax body: tagged case with a hint
==================

syntax literal =
  | _NUM int hint(prose "the integer" %0)

---

(source_file
  (syntax_definition
    (syntax_id
      (lowercase_id))
    (syntax_body
      (syntax_variant
        (notation_type
          (constructor_id
            (tag))
          (plain_type
            (base_type
              (syntax_id
                (lowercase_id)))))
        (hint
          (hint_name)
          (text_literal)
          (hint_placeholder))))))

==================
syntax body: keyword atoms and operators
==================

syntax command =
  | SKIP
  | id '=' expr

---

(source_file
  (syntax_definition
    (syntax_id
      (lowercase_id))
    (syntax_body
      (syntax_variant
        (notation_type
          (constructor_id
            (multi_caps_id))))
      (syntax_variant
        (notation_type
          (plain_type
            (base_type
              (syntax_id
                (lowercase_id))))
          (operator)
          (plain_type
            (base_type
              (syntax_id
                (lowercase_id)))))))))

==================
relation body: turnstile and double arrow
==================

relation Eval_expr:
  env |- expr ==> value

---

(source_file
  (relation_declaration
    name: (relation_id
      (uppercase_id))
    body: (notation_type
      left: (plain_type
        (base_type
          (syntax_id
            (lowercase_id))))
      operator: (atom_relational)
      left: (plain_type
        (base_type
          (syntax_id
            (lowercase_id))))
      operator: (atom_infix)
      right: (plain_type
        (base_type
          (syntax_id
            (lowercase_id)))))))

==================
property: trailing generator hint
==================

property Type_safety:
  Eval_prog: |- prog -| _
  -- Check_prog: |- prog
  hint(generator $functions_prog)

---

(source_file
  (property_definition
    name: (relation_id
      (uppercase_id))
    conclusion: (rule_premise
      relation_name: (relation_id
        (uppercase_id))
      body: (notation_rel
        left: (notation_seq
          (notation_atom
            (atom
              (atom_relational)))
          (notation_atom
            (regular_id
              (lowercase_id))))
        operator: (atom_relational)
        right: (notation_seq
          (notation_atom
            (wildcard_pattern)))))
    premises: (rule_premise
      relation_name: (relation_id
        (uppercase_id))
      body: (notation_seq
        (notation_atom
          (atom
            (atom_relational)))
        (notation_atom
          (regular_id
            (lowercase_id)))))
    hints: (hint
      (hint_name)
      (hint_function_id))))
